# roboticsStudio

./: .gitattributes  README.md  map_new.bt  map_new.pcd  map_new.pgm  map_new.yaml  office_world_2.world  test_map.pgm  test_map.yaml
Sprint3/: half_map.pgm  half_map.yaml  half_map2.pgm  half_map2.yaml  half_map3.pgm  half_map3.yaml  half_map4.pgm  half_map4.yaml  half_map5.pgm  half_map5.yaml  half_map6.pgm  half_map6.yaml  half_map7.pgm  half_map7.yaml  half_map8.pgm  half_map8.yaml  map3.pgm  map3.yaml  map_1m.bt  map_1m.yaml  map_cropped.pgm
Sprint3/cylinder_detector/: CMakeLists.txt  Doxyfile  package.xml
Sprint3/cylinder_detector/doc/html/: classCylinderNode__inherit__graph.map  cylinder__node_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  hierarchy.html  inherits.html
Sprint3/cylinder_detector/doc/html/search/: all_3.js  all_4.js  all_5.js  classes_0.js  files_1.js  functions_0.js  functions_3.js  functions_4.js  pages_0.js  variables_3.js
Sprint3/cylinder_detector/doc/latex/: annotated.tex  classCylinderNode.tex  cylinder__node_8cpp.tex  cylinder__node_8cpp__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex
Sprint3/cylinder_detector/src/: cylinder_node.cpp
Sprint3/map_overlay/: CMakeLists.txt  package.xml
Sprint3/map_overlay/src/: image_publisher_node.cpp  map_overlay_node.cpp
Sprint3/my_slam/: CMakeLists.txt  package.xml
Sprint3/my_slam/src/: slam_node.cpp
Sprint4/cylinder/: CMakeLists.txt  frames_2024-10-08_11.10.03.gv  package.xml
Sprint4/cylinder/doc/html/: annotated.html  classCylinderNode-members.html  classCylinderNode.html  classCylinderNode__inherit__graph.md5  classes.html  cylinder__node_8cpp__incl.map  cylinder__node_8cpp__incl.md5  files.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  main__page_8cpp.html
Sprint4/cylinder/doc/html/search/: all_0.js  all_1.js  all_2.js  all_6.js  files_0.js  functions_1.js  functions_2.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
Sprint4/cylinder/doc/latex/: classCylinderNode__inherit__graph.md5  hierarchy.tex  index.tex  main__page_8cpp.tex  refman.tex
Sprint4/cylinder/src/: cylinder_rotate.cpp  main_page.cpp  odometry_node.cpp  odometry_node.h
lab2/my_laser_scan_package/: CMakeLists.txt  package.xml
lab2/my_laser_scan_package/src/: main.cpp  subscriber.cpp  subscriber.h
lab5/: CMakeLists.txt  package.xml
lab5/src/: node.cpp
lab_4/turtlebot3_state_estimation/: CMakeLists.txt  package.xml
lab_4/turtlebot3_state_estimation/src/: dead_reckoning.cpp  dead_reckoning.h  main.cpp
localisation_activity/: CMakeLists.txt  package.xml
localisation_activity/src/: laser_scansubscriber.cpp
map_processor/: CMakeLists.txt  package.xml
map_processor/src/: map_processor_node.cpp
scan_matching_localizer/: CMakeLists.txt  package.xml
scan_matching_localizer/src/: scan_matching_localizer_node.cpp
