<?xml version="1.0"?>
<package format="3">
  <name>map_processor_node</name>
  <version>0.0.1</version>
  <description>ROS2 node that processes occupancy grid maps and visualizes them using OpenCV.</description>
  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>OpenCV</build_depend>
    <depend>sensor_msgs</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

